# bmath

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  makefile  pyproject.toml  readme.md
.github/workflows/: ci.yaml
include/: bmath.hh
include/bmath/: bmath.hh  mint.hh  sieve.hh
tests/: CMakeLists.txt  test_add.cc  test_bmath.cc  test_compilation.cc  test_sieve.cc
